// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body component tests base regular paragraph 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 12.25,
        "lineHeight": 18,
      },
      {
        "lineHeight": 21,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests default props 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#181a1f",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests lg regular paragraph 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#181a1f",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests xl bold strikethrough disabled 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.5,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 17.5,
        "letterSpacing": 0,
        "lineHeight": 30,
      },
      undefined,
      {
        "textDecorationLine": "line-through",
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;
